# MINGW_WINDOWS_VERSIONINFO

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  windows.cmake
.github/workflows/: build.yml
